<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/recipe_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/recipeConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:minHeight="1200dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">


            <TextView
                android:id="@+id/recipeViewTitle"
                android:layout_width="444dp"
                android:layout_height="77dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:text="RECIPE NAME HERE"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.009" />

            <TextView
                android:id="@+id/Abstract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="104dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="This is where the abstract goes"
                android:textSize="30sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Ingredients"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Abstract"
                app:layout_constraintVertical_bias="0.079" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="123dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:onClick="deleteRecipe"
                android:text="DELETE RECIPE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.982"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/Content"
                android:layout_width="417dp"
                android:layout_height="216dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="This is where some content goes"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Ingredients" />

            <TextView
                android:id="@+id/Tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.442"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Content"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/star1"
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="star1"
                android:text="1"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toStartOf="@+id/star2"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tags"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/star2"
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="star2"
                android:text="2"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.283"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tags" />

            <Button
                android:id="@+id/star3"
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="8dp"
                android:onClick="star3"
                android:text="3"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toStartOf="@+id/star4"
                app:layout_constraintHorizontal_bias="0.442"
                app:layout_constraintStart_toEndOf="@+id/star2"
                app:layout_constraintTop_toBottomOf="@+id/Tags"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/star4"
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="star4"
                android:text="4"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.739"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tags"
                app:layout_constraintVertical_bias="0.001" />

            <Button
                android:id="@+id/star5"
                android:layout_width="46dp"
                android:layout_height="47dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="star5"
                android:text="5"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.595"
                app:layout_constraintStart_toEndOf="@+id/star4"
                app:layout_constraintTop_toBottomOf="@+id/Tags"
                app:layout_constraintVertical_bias="0.005" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="265dp"
                android:layout_height="28dp"
                android:layout_marginStart="155dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="172dp"
                android:layout_marginBottom="8dp"
                android:text="NOT YET RATED"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star3"
                app:layout_constraintVertical_bias="0.095" />

            <Button
                android:id="@+id/goToAdd2Sub"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorSecondary"
                android:onClick="add2Sub"
                android:text="add to sublist(s)"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.749"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagGrid"></Button>

            <GridView
                android:id="@+id/tagGrid"
                android:layout_width="516dp"
                android:layout_height="195dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:numColumns="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating" />

            <Button
                android:id="@+id/button3"
                android:layout_width="145dp"
                android:layout_height="45dp"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorSecondary"
                android:onClick="exportRecipe"
                android:text="Export Recipe"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/goToAdd2Sub"
                app:layout_constraintHorizontal_bias="0.423"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tagGrid" />

            <TextView
                android:id="@+id/commentView"
                android:layout_width="509dp"
                android:layout_height="160dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/deleteButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goToAdd2Sub" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>


