...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.BrowseAll"
    android:background="@color/colorPrimary">

    <ListView
        android:id="@+id/recipeListView"
        android:layout_width="547dp"
        android:layout_height="813dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
