<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:mode="twoLine"
        android:clickable="false"
        android:paddingBottom="9dp"
        android:paddingTop="5dp" >

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/recipe_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipe_name"
        android:layout_alignLeft="@+id/recipe_name"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name"
        tools:layout_editor_absoluteX="16dp" />

</android.support.constraint.ConstraintLayout>