...
        android:textColor="@color/colorAccent"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoadRecipe" />

    <ImageView
        android:id="@+id/appTitleView"
        android:layout_width="wrap_content"
        android:layout_height="173dp"
        android:layout_marginStart="70dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chefs_collection_logo_v1" />


    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="80dp"

        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
...
